switched to use Base64 encoding/decoding from Apache Commons